[gd_scene load_steps=18 format=3 uid="uid://dpt5bkob0uyg1"]

[ext_resource type="Script" uid="uid://mynvxsxg8qh5" path="res://scripts/main_menu.gd" id="1_bqqt6"]
[ext_resource type="Texture2D" uid="uid://dt0kipmjgrhu7" path="res://assets/images/backgrounds/bg_main.jpg" id="1_l6cm7"]
[ext_resource type="FontFile" uid="uid://c6vea7p880qnd" path="res://assets/fonts/press-start-2p-font/PressStart2P-vaV7.ttf" id="2_ekxnf"]
[ext_resource type="FontFile" uid="uid://dlcywn1wkeki5" path="res://assets/fonts/poppins-font/PoppinsBlack-VxOe.otf" id="4_wu84c"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ekxnf"]
texture = ExtResource("1_l6cm7")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vue75"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jk1qb"]
bg_color = Color(0, 0.5017437, 0.85814106, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5dd4i"]
bg_color = Color(0, 0.5882353, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wu84c"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tbmy8"]
bg_color = Color(1, 0.5882353, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ln24"]
bg_color = Color(0.85814106, 0.5017437, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oa1go"]
bg_color = Color(0.85814106, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l6cm7"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqqt6"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_8ln24"]
color = Color(0.7708395, 0.77083945, 0.77083945, 1)
thickness = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rtw2f"]
bg_color = Color(0, 0.7019608, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lgwnu"]
bg_color = Color(0, 0.8627451, 1, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bqqt6")

[node name="Panel_Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ekxnf")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_top = -70.0
offset_right = 1152.0
offset_bottom = 578.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 20
theme_override_constants/outline_size = 10
theme_override_fonts/normal_font = ExtResource("2_ekxnf")
theme_override_font_sizes/normal_font_size = 100
text = "Chrono Trials"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button_Play" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 66.0
offset_right = 75.0
offset_bottom = 126.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0.5737749, 0.735357, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_ekxnf")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jk1qb")
theme_override_styles/hover = SubResource("StyleBoxFlat_5dd4i")
theme_override_styles/disabled = SubResource("StyleBoxFlat_wu84c")
theme_override_styles/focus = SubResource("StyleBoxFlat_jk1qb")
text = "PLAY"

[node name="Button_Setting" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = 146.0
offset_right = 125.0
offset_bottom = 206.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.735357, 0.42688203, 0, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_ekxnf")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jk1qb")
theme_override_styles/hover = SubResource("StyleBoxFlat_tbmy8")
theme_override_styles/disabled = SubResource("StyleBoxFlat_wu84c")
theme_override_styles/focus = SubResource("StyleBoxFlat_8ln24")
text = "SETTING"

[node name="Button_Exit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 226.0
offset_right = 74.99963
offset_bottom = 286.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.735357, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_ekxnf")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
theme_override_styles/pressed = SubResource("StyleBoxFlat_oa1go")
theme_override_styles/hover = SubResource("StyleBoxFlat_l6cm7")
theme_override_styles/disabled = SubResource("StyleBoxFlat_wu84c")
theme_override_styles/focus = SubResource("StyleBoxFlat_oa1go")
text = "EXIT"

[node name="SettingMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel_Setting" type="Panel" parent="SettingMenu"]
layout_direction = 4
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bqqt6")

[node name="Label" type="Label" parent="SettingMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -244.5
offset_right = 244.5
offset_bottom = 140.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("4_wu84c")
theme_override_font_sizes/font_size = 100
text = "SETTINGS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button_Back" type="Button" parent="SettingMenu"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 44.0
offset_top = -92.0
offset_right = 193.99963
offset_bottom = -32.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.735357, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_ekxnf")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
theme_override_styles/pressed = SubResource("StyleBoxFlat_oa1go")
theme_override_styles/hover = SubResource("StyleBoxFlat_l6cm7")
theme_override_styles/disabled = SubResource("StyleBoxFlat_wu84c")
theme_override_styles/focus = SubResource("StyleBoxFlat_oa1go")
text = "BACK"

[node name="HSlider_Master" type="HSlider" parent="SettingMenu"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 150.0
offset_top = -124.0
offset_right = 950.0
offset_bottom = -73.99997
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxLine_8ln24")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_rtw2f")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_lgwnu")
value = 50.0

[node name="Label_Master" type="Label" parent="SettingMenu/HSlider_Master"]
layout_mode = 1
offset_left = 8.0
offset_top = -25.0
offset_right = 343.0
offset_bottom = 18.0
theme_override_fonts/font = ExtResource("4_wu84c")
theme_override_font_sizes/font_size = 30
text = "Master Volume"
vertical_alignment = 1

[node name="HSlider_Music" type="HSlider" parent="SettingMenu"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 150.0
offset_top = -24.0
offset_right = 950.0
offset_bottom = 26.00003
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxLine_8ln24")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_rtw2f")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_lgwnu")
value = 50.0

[node name="Label_Music" type="Label" parent="SettingMenu/HSlider_Music"]
layout_mode = 1
offset_left = 8.0
offset_top = -25.0
offset_right = 343.0
offset_bottom = 18.0
theme_override_fonts/font = ExtResource("4_wu84c")
theme_override_font_sizes/font_size = 30
text = "Music Volume"
vertical_alignment = 1

[node name="HSlider_Sfx" type="HSlider" parent="SettingMenu"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 150.0
offset_top = 76.0
offset_right = 950.0
offset_bottom = 126.00003
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxLine_8ln24")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_rtw2f")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_lgwnu")
value = 50.0

[node name="Label_Sfx" type="Label" parent="SettingMenu/HSlider_Sfx"]
layout_mode = 1
offset_left = 8.0
offset_top = -25.0
offset_right = 343.0
offset_bottom = 18.0
theme_override_fonts/font = ExtResource("4_wu84c")
theme_override_font_sizes/font_size = 30
text = "SFX Volume"
vertical_alignment = 1

[connection signal="pressed" from="Button_Play" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="Button_Setting" to="." method="_on_button_setting_pressed"]
[connection signal="pressed" from="Button_Exit" to="." method="_on_button_exit_pressed"]
[connection signal="pressed" from="SettingMenu/Button_Back" to="." method="_on_button_back_pressed"]
